methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:3: error: ';' expected but ')' found.
                                   else {forward(); if (getGroundColor()==Color.green) {backward(); return true} else {backward(); return false}})
                                                                                                                                                 ^